<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GitHub Image Sync</string>
    <string name="github_owner_hint">GitHub username / org</string>
    <string name="github_repo_hint">Repository name</string>
    <string name="github_token_hint">Personal Access Token (repo scope)</string>
    <string name="encryption_password_hint">Encryption password (optional)</string>
    <string name="save_settings">Save Settings</string>
    <string name="sync_button">Sync (Download)</string>
    <string name="download_other_button">Download from other device…</string>
    <string name="upload_button">Upload</string>
    <string name="device_codename_label">Device folder:</string>
    <string name="status_idle">Ready</string>
    <string name="permission_required">Storage permission is required to access photos</string>
    <string name="settings_saved">Settings saved</string>
    <string name="missing_config">Please fill in Owner, Repo and Token</string>
    <string name="choose_device_title">Download from which device?</string>
    <string name="no_other_devices">No other device folders found in the repository.</string>
    <string name="listing_devices">Looking up device folders…</string>
</resources>
